# tilebench

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  test_cli.py  test_middleware.py  test_reader.py  test_tilebench.py  test_viz.py
tests/fixtures/: WGS1984Quad.json
tilebench/: __init__.py  middleware.py  viz.py
tilebench/resources/: __init__.py  responses.py
tilebench/ressources/: __init__.py  responses.py
tilebench/scripts/: __init__.py  cli.py
tilebench/static/: spherical-mercator.js
tilebench/templates/: index.html
