[project]
name = "tilebench"
description = "Inspect HEAD/LIST/GET requests withing Rasterio"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "aiofiles",
    "fastapi>=0.73",
    "jinja2>=3.0,<4.0.0",
    "geojson-pydantic",
    "loguru",
    "rasterio",
    "rio-tiler>=3.1,<4.0",
    "wurlitzer",
    "uvicorn[standard]>=0.12.0,<0.16.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "requests",
]
dev = [
    "pre-commit",
]

[project.urls]
Source = "https://github.com/developmentseed/tilebench"

[project.scripts]
tilebench = "tilebench.scripts.cli:cli"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "tilebench"

[tool.flit.sdist]
exclude = [
    "tests/",
    ".github/",
    "CHANGES.md",
    "Dockerfile",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".flake8",
    ".bumpversion.cfg",
]

[tool.isort]
profile = "black"
known_first_party = ["tilebench"]
known_third_party = ["rasterio", "rio_tiler", "morecantile", "geojson_pydantic", "fastapi"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.pydocstyle]
select = "D1"
match = "(?!test).*.py"
