[project]
name = "tilebench"
description = "Inspect HEAD/LIST/GET requests withing Rasterio"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version", "readme"]
dependencies = [
    "aiofiles",
    "fastapi>=0.73",
    "jinja2>=3.0,<4.0.0",
    "geojson-pydantic",
    "loguru",
    "rasterio>=1.3.0",
    "rio-tiler>=4.0.0a0,<5.0",
    "wurlitzer",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "requests",
]
dev = [
    "pre-commit",
]

[project.urls]
Homepage = 'https://github.com/developmentseed/tilebench'
Issues = "https://github.com/developmentseed/tilebench/issues"
Source = "https://github.com/developmentseed/tilebench"

[project.scripts]
tilebench = "tilebench.scripts.cli:cli"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
# construct the PyPI readme from README.md and HISTORY.md
fragments = [
    {path = "README.md"},
    {text = "\n## Changelog\n\n"},
    {path = "CHANGES.md"},
]
# convert GitHUB issue/PR numbers and handles to links
substitutions = [
    {pattern = '(\s+)#(\d+)', replacement = '\1[#\2](https://github.com/developmentseed/tilebench/issues/\2)'},
    {pattern = '(\s+)@([\w\-]+)', replacement = '\1[@\2](https://github.com/\2)'},
    {pattern = '@@', replacement = '@'},
]

[tool.hatch.version]
path = "tilebench/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  "Dockerfile",
  ".pytest_cache",
  ".history",
  ".github",
  ".bumpversion.cfg",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
]

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme>=22.5.0"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
known_first_party = ["tilebench"]
known_third_party = ["rasterio", "rio_tiler", "morecantile", "geojson_pydantic", "fastapi"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.pydocstyle]
select = "D1"
match = "(?!test).*.py"
