[bumpversion]
current_version = 0.5.1
commit = True
tag = True
tag_name = {new_version}
parse = 
	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = 
	{major}.{minor}.{patch}

[bumpversion:file:tilebench/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
version = attr: tilebench.__version__

[isort]
profile = black
known_first_party = tilebench
known_third_party = rasterio,rio_tiler,mercantile,supermercado
default_section = THIRDPARTY

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 12
max-line-length = 90

[mypy]
no_strict_optional = True

[pydocstyle]
select = D1
match = (?!test).*\.py
